fixed overflow

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -13,6 +13,7 @@ html {
         width: 1500px; 
         height: unset;
         padding-top: unset;
+        overflow: unset;
     }
 }
 
